--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #f7f7f7;
+    /* background-color: #f7f7f7; */
     background-image: url('img/Carte.png');
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
   }
@@ -48,7 +48,7 @@
 <body>
 <div class="card">
   <div class="header">Invitation à la fête d'Aldéa</div>
-  <div class="message">26 Août au lac Carillon, Brownsburg-Chatham</div>
+  <div class="message">26 Août au lac Carillon, Brownsburg-Chatham<br>SVP bien vouloir confirmer votre présence.</div>
   <div class="footer">De 12:00 à 16:00</div>
 </div>
 </body>
