--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    /* background-color: #f7f7f7; */
+    background-color: #060606;
     background-image: url('img/Carte.png');
     background-size: contain;
     background-position: center;
