--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
     font-size: 20px;
     color: #0b0b0b;
   }
+
+  .confirmation{
+    background-color: #ee8b13;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+    border-radius: 20px;
+  }
+
+  .confirmation:hover {
+    background-color: #f6e608;
+  }
 </style>
 </head>
 <body>
@@ -50,7 +61,7 @@
   <div class="header">Invitation à la fête d'Aldéa</div>
   <div class="message">26 Août au lac Carillon, Brownsburg-Chatham<br>SVP bien vouloir confirmer votre présence.</div>
   <div class="footer">De 12:00 à 16:00</div>
-  <button id="confirmationButton" onclick="handleConfirmation()">Confirmer ma présence</button>
+  <button class="confirmation" id="confirmationButton" onclick="handleConfirmation()">Confirmer ma présence</button>
 
 
 </div>
