--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </div>
 <script>
     function handleConfirmation() {
-      window.location.href = 'https://docs.google.com/spreadsheets/d/1TIliMg3H7GQh0xT5jJeNtabHuCGk0JU14HIAoWMbg1U/edit#gid=0';
+      window.location.href = 'https://docs.google.com/spreadsheets/d/1TIliMg3H7GQh0xT5jJeNtabHuCGk0JU14HIAoWMbg1U/edit?resourcekey#gid=1086169367';
     }
     </script>
     
