--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 
 
 </div>
-<script>
+<!-- <script>
     function handleConfirmation() {
       window.location.href = 'https://docs.google.com/spreadsheets/d/1TIliMg3H7GQh0xT5jJeNtabHuCGk0JU14HIAoWMbg1U/edit?resourcekey#gid=1086169367';
     }
-    </script>
+    </script> -->
     
 </body>
 </html>
