--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </div>
 <script>
     function handleConfirmation() {
-      window.location.href = 'https://docs.google.com/spreadsheets/d/1TIliMg3H7GQh0xT5jJeNtabHuCGk0JU14HIAoWMbg1U/edit?resourcekey#gid=2142832283';
+      window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSfFLjSIBIfIbG8VXu4FAz_4Ll0yGszv92HjCkgHxrYQIV_Rag/viewform?usp=sf_link';
     }
     </script>
     
